workspace(name = "dev_pscm")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

new_git_repository(
    name = "cpp-linenoise",
    build_file = "@dev_pscm//3rd:cpp-linenoise.bazel",
    commit = "4cd89adfbc07cedada1aa32be12991828919d91b",
    remote = "https://github.com/yhirose/cpp-linenoise.git",
)

new_git_repository(
    name = "ust",
    build_file = "@dev_pscm//3rd:ust.bazel",
    commit = "28f5230d75e677ce8e4e140b2f3e0b8550195c85",
    remote = "https://github.com/MisterTea/UniversalStacktrace.git",
)

new_git_repository(
    name = "string-view-lite",
    build_file = "@dev_pscm//3rd:string-view-lite.bazel",
    commit = "5b1d95fe2c0ee18e654876487898b9a423a954db",
    remote = "https://github.com/martinmoene/string-view-lite.git",
)

new_git_repository(
    name = "variant",
    build_file = "@dev_pscm//3rd:variant.bazel",
    commit = "23cb94f027d4ef33bf48133acc2695c7e5c6f1e7",
    remote = "https://github.com/mpark/variant.git",
)

new_git_repository(
    name = "optional",
    build_file = "@dev_pscm//3rd:optional.bazel",
    commit = "3a1209de8370bf5fe16362934956144b49591565",
    remote = "https://github.com/TartanLlama/optional.git",
)

new_git_repository(
    name = "filesystem",
    build_file = "@dev_pscm//3rd:filesystem.bazel",
    commit = "72a76d774e4c7c605141fd6d11c33cc211209ed9",
    remote = "https://github.com/gulrak/filesystem.git",
)

http_archive(
    name = "doctest",
    sha256 = "6745e17682d6e2be1ea31ec8bf1814a3d7cb17d61d120e5f2ee5a075926634ad",
    strip_prefix = "doctest-2.4.11",
    url = "https://github.com/doctest/doctest/archive/refs/tags/v2.4.11.zip",
)

## rules_jvm_external

http_archive(
    name = "rules_jvm_external",
    sha256 = "cd1a77b7b02e8e008439ca76fd34f5b07aecb8c752961f9640dea15e9e5ba1ca",
    strip_prefix = "rules_jvm_external-4.2",
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/4.2.zip",
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    name = "maven",
    artifacts = [
        "androidx.appcompat:appcompat:1.5.1",
        "androidx.constraintlayout:constraintlayout:2.1.4",
        # Needed to enforce version conflict resolution
        "androidx.savedstate:savedstate:1.2.0",
        "androidx.lifecycle:lifecycle-livedata-core:2.5.1",
        "androidx.lifecycle:lifecycle-livedata:2.5.1",
        "androidx.lifecycle:lifecycle-process:2.5.1",
        "androidx.lifecycle:lifecycle-runtime:2.5.1",
        "androidx.lifecycle:lifecycle-service:2.5.1",
        "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1",
        "androidx.lifecycle:lifecycle-viewmodel:2.5.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)

## Android

http_archive(
    name = "build_bazel_rules_android",
    sha256 = "cd06d15dd8bb59926e4d65f9003bfc20f9da4b2519985c27e190cddc8b7a7806",
    strip_prefix = "rules_android-0.1.1",
    urls = ["https://github.com/bazelbuild/rules_android/archive/v0.1.1.zip"],
)

load("@build_bazel_rules_android//android:rules.bzl", "android_sdk_repository")

android_sdk_repository(
    name = "androidsdk",
)

http_archive(
    name = "rules_android_ndk",
    sha256 = "3fa4a58f4df356bca277219763f91c64f33dcc59e10843e9762fc5e7947644f9",
    strip_prefix = "rules_android_ndk-63fa7637902fb1d7db1bf86182e939ed3fe98477",
    url = "https://github.com/bazelbuild/rules_android_ndk/archive/63fa7637902fb1d7db1bf86182e939ed3fe98477.zip",
)

load("@rules_android_ndk//:rules.bzl", "android_ndk_repository")

android_ndk_repository(
    name = "androidndk",
)

register_toolchains("@androidndk//:all")

http_archive(
    name = "spdlog",
    build_file = "@//:spdlog.bazel",
    sha256 = "33f83c6b86ec0fbbd0eb0f4e980da6767494dc0ad063900bcfae8bc3e9c75f21",
    strip_prefix = "spdlog-1.11.0",
    urls = [
        "https://github.com/gabime/spdlog/archive/refs/tags/v1.11.0.zip",
    ],
)

# rules required for ios-app

http_archive(
    name = "build_bazel_rules_apple",
    sha256 = "cd3b62efed8eaf306050817205d5139de3189be422ee009038783c3da0b04483",
    strip_prefix = "rules_apple-5b7c929ec4f3618a3f558c7ccae64f155f2646b7",
    url = "https://github.com/bazelbuild/rules_apple/archive/5b7c929ec4f3618a3f558c7ccae64f155f2646b7.tar.gz",
)

load(
    "@build_bazel_rules_apple//apple:repositories.bzl",
    "apple_rules_dependencies",
)

apple_rules_dependencies()

load(
    "@build_bazel_rules_swift//swift:repositories.bzl",
    "swift_rules_dependencies",
)

swift_rules_dependencies()

load(
    "@build_bazel_rules_swift//swift:extras.bzl",
    "swift_rules_extra_dependencies",
)

swift_rules_extra_dependencies()

load(
    "@build_bazel_apple_support//lib:repositories.bzl",
    "apple_support_dependencies",
)

apple_support_dependencies()

# rules required by ios-app Xcode integration

http_archive(
    name = "rules_xcodeproj",
    sha256 = "7967b372bd1777214ce65c87a82ac0630150b7504b443de0315ea52e45758e0c",
    url = "https://github.com/MobileNativeFoundation/rules_xcodeproj/releases/download/1.3.3/release.tar.gz",
)

load(
    "@rules_xcodeproj//xcodeproj:repositories.bzl",
    "xcodeproj_rules_dependencies",
)

xcodeproj_rules_dependencies()

http_archive(
    name = "emsdk",
    sha256 = "bbea764c57af830e761f1fb8600d42dc303aa63ffd43647694eda5b8b757b469",
    strip_prefix = "emsdk-3.1.35/bazel",
    url = "https://github.com/emscripten-core/emsdk/archive/refs/tags/3.1.35.tar.gz",
)

load("@emsdk//:deps.bzl", emsdk_deps = "deps")

emsdk_deps()

load("@emsdk//:emscripten_deps.bzl", emsdk_emscripten_deps = "emscripten_deps")

emsdk_emscripten_deps(emscripten_version = "3.1.35")

load("@emsdk//:toolchains.bzl", "register_emscripten_toolchains")

register_emscripten_toolchains()

http_archive(
    name = "rules_nodejs",
    sha256 = "a833b08fc846e27a73ac2b7062e4f48cace0e72a072c6c3fa756847dc44246dd",
    strip_prefix = "rules_nodejs-6.0.0/",
    url = "https://github.com/bazelbuild/rules_nodejs/releases/download/v6.0.0/rules_nodejs-v6.0.0.tar.gz",
)

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains", "rules_nodejs_dependencies")

rules_nodejs_dependencies()

nodejs_register_toolchains(
    name = "nodejs",
    node_version = "20.4.0",
)
